# eziot

./: build.sh  docker-compose.yml
cloud/: Dockerfile
cloud/app/: peer.py  run.py
device/: .gitignore  Dockerfile  build.sh  start.sh
device/initrd/debug/: eziot-service  init
device/kernel/: linux-5.10.74-arm.zImage
device/service/: CMakeLists.txt
device/service/src/: handler.c  handler.h  main.c  peer.c  peer.h  proc.c  proc.h  util.c  util.h
device/tools/: pack_initrd.sh  unpack_initrd.sh
solver/: Dockerfile  exploit.py
